--- a/dermardiros/armeniancoffee.tex
+++ b/dermardiros/armeniancoffee.tex
@@ -5,7 +5,7 @@
 
 \marginnote{
     \textbf{Makes a cup or two} \\
-    Cook time: 5 minutes \\
+    Cook time: 5~minutes \\
     \vspace*{\baselineskip}
 
     Finely ground Armenian coffee \\
