--- a/dermardiros/banana_cake.tex
+++ b/dermardiros/banana_cake.tex
@@ -5,20 +5,20 @@
 \index{banana}
 
 \marginnote{
-    \textbf{Makes 1 loaf} \\
-    Prep time: 20 minutes \\
-    Cook time: 45 minutes \\
+    \textbf{Makes 1~loaf} \\
+    Prep time: 20~minutes \\
+    Cook time: 45~minutes \\
     \vspace*{\baselineskip}
 
-    3 ripe bananas \\
-    6 tbsp vegetable oil \\
-    1/2 cup sugar \\
-    1 egg \\
-    1 tsp vanilla extract\\
-    1/4 tsp salt \\
-    1 1/2 cups all-purpose flour \\
-    1 tsp baking soda \\
-    1 tsp baking powder
+    3~ripe bananas \\
+    6~tbsp vegetable oil \\
+    1/2~cup sugar \\
+    1~egg \\
+    1~tsp vanilla extract\\
+    1/4~tsp salt \\
+    1 1/2~cups all-purpose flour \\
+    1~tsp baking soda \\
+    1~tsp baking powder
 }
 
 Family member: Dzovag
@@ -31,5 +31,5 @@ Family member: Dzovag
     \item Add the sugar, egg, vanilla extract and salt. Mix well.
     \item In another bowl, mix the flour, baking soda and baking powder. Add the dry ingredients to the other bowl containing the wet ingredients.
     \item Once well mixed, pour into a greased loaf pan.
-    \item Bake for 12-15 minutes.
+    \item Bake for 12-15~minutes.
 \end{enumerate}
