--- a/dermardiros/betteraves.tex
+++ b/dermardiros/betteraves.tex
@@ -4,12 +4,12 @@
 \index{beet}
 
 \marginnote{
-    \textbf{Makes 1 large side dish} \\
-    Prep time: 15 minutes \\
-    Cook time: 1 hour \\
+    \textbf{Makes 1~large side dish} \\
+    Prep time: 15~minutes \\
+    Cook time: 1~hour \\
     \vspace*{\baselineskip}
 
-    3 lbs red beets \\
+    3~lbs red beets \\
     Garlic, peeled and cut into slices \\
     White vinegar \\
     Salt \& pepper
