--- a/dermardiros/biscuits_grandmere.tex
+++ b/dermardiros/biscuits_grandmere.tex
@@ -6,18 +6,18 @@
 \index{cookies}
 
 \marginnote{
-    \textbf{Makes 40-60 cookies} \\
-    Prep time: 45 minutes \\
-    Cook time: 20 minutes \\
+    \textbf{Makes 40-60~cookies} \\
+    Prep time: 45~minutes \\
+    Cook time: 20~minutes \\
     \vspace*{\baselineskip}
 
-    4 cups all-purpose flour, Robin Hood \\
-    2 tsp baking powder \\
-    1/2 tsp mahleb, ground \\
-    3/4 cup sugar \\
-    1/2 cup vegetable oil, Canola \\
-    1/2 cup margarine, Becel \\
-    1 cup milk \\
+    4~cups all-purpose flour, Robin Hood \\
+    2~tsp baking powder \\
+    1/2~tsp mahleb, ground \\
+    3/4~cup sugar \\
+    1/2~cup vegetable oil, Canola \\
+    1/2~cup margarine, Becel \\
+    1~cup milk \\
     Egg yolks \\
     Sesame seeds
 }
@@ -34,7 +34,7 @@ Family member: Metzma Lucie
     \item Shape into thin ropes, then into 2-inch circles.
     \item Place on baking sheet lined with parchment.
     \item For egg wash, whisk egg yolks with a little bit of water in a bowl. Brush the egg wash onto cookies and sprinkle with sesame seeds.
-    \item Bake at 350\degree F on the top rack for about 20 minutes, rotate pan once after 10 minutes.
+    \item Bake at 350\degree F on the top rack for about 20~minutes, rotate pan once after 10~minutes.
 \end{enumerate}
 
 \twosidecaptionfigure{dermardiros/images/Family.jpg}{dermardiros/images/Family_boys.jpg}{Metzma's birthday, 2024}{fig:biscuits_grandmere2}
