--- a/dermardiros/chocolate_fridge_cake.tex
+++ b/dermardiros/chocolate_fridge_cake.tex
@@ -6,13 +6,13 @@
 \index{cookies}
 
 \marginnote{
-    \textbf{Makes 1 cake} \\
-    Prep time: 20 minutes + chill overnight in the fridge\\
-    Cook time: 5 minutes \\
+    \textbf{Makes 1~cake} \\
+    Prep time: 20~minutes + chill overnight in the fridge\\
+    Cook time: 5~minutes \\
     \vspace*{\baselineskip}
 
-     1 pack of Sheriff chocolate pudding \\
-     1 pack of tea biscuits, Dare Traditions Social Tea brand
+     1~pack of Sheriff chocolate pudding \\
+     1~pack of tea biscuits, Dare Traditions Social Tea brand
 }
 
 \textit{Chocolate fridge cake with cookies}
