--- a/dermardiros/clementinesalad.tex
+++ b/dermardiros/clementinesalad.tex
@@ -4,14 +4,14 @@
 \index{fruit}
 
 \marginnote{
-    \textbf{Makes 10 servings} \\
-    Prep time: 15 minutes \\
-    Cook time: 0 minutes \\
+    \textbf{Makes 10~servings} \\
+    Prep time: 15~minutes \\
+    Cook time: 0~minutes \\
     \vspace*{\baselineskip}
 
-    Two heads of romaine lettuce, about 35 leaves \\
-    15 clementines \\
-    3/4 cup of cashews \\
+    Two heads of romaine lettuce, about 35~leaves \\
+    15~clementines \\
+    3/4~cup of cashews \\
     Kraft Zesty Italian dressing
 }
 
