--- a/dermardiros/dinerburgers.tex
+++ b/dermardiros/dinerburgers.tex
@@ -5,13 +5,13 @@
 \index{bbq}
 
 \marginnote{
-    \textbf{Makes 4 double patty burgers} \\
-    Prep time: 15 minutes \\
-    Cook time: 30 minutes \\
+    \textbf{Makes 4~double patty burgers} \\
+    Prep time: 15~minutes \\
+    Cook time: 30~minutes \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for burgers and toppings} \\
-    Approx 680 g of ground beef, 80-20 or 70-30 blend (lean meat to fat) \\
+    Approx 680~g of ground beef, 80-20~or 70-30~blend (lean meat to fat) \\
     Salt and pepper \\
     Brioche buns \\
     Finely shredded iceberg lettuce \\
@@ -22,7 +22,7 @@
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for sauce} \\
-    1/2 yellow onion, diced \\
+    1/2~yellow onion, diced \\
     Mayonnaise \\
     Yellow mustard \\
     Hot sauce \\
@@ -39,7 +39,7 @@ Family member: Dan
     \item Prepare the sauce: in a bowl, mix the onion with mayonnaise, yellow mustard, dashes of hot sauce, and dashes of Worcestershire sauce.
     \item Roll even balls of 80-85~g of the ground beef. Smash down the balls into flat, round disks using a heavy bottom pot and place each disk in a layer of parchment paper. Optional: Smash finely slices onions with the beef.
     \item Start by buttering the buns on both sides and place on the grill. Toast the buns over medium heat. Do this before, so that once the meat is done, the burger can be quickly constructed.
-    \item Bring up the heat to high, and place patties on the grill. Season the patties on one side. Flip when juices come up to the surface, after approximately 2-5 minutes. Place the cheese on top of the patties, on half of them. Stack 2 patties together to have the cheese in the middle. Remove the patties from the grill once the other side is cooked and cheese has melted.
+    \item Bring up the heat to high, and place patties on the grill. Season the patties on one side. Flip when juices come up to the surface, after approximately 2-5~minutes. Place the cheese on top of the patties, on half of them. Stack 2~patties together to have the cheese in the middle. Remove the patties from the grill once the other side is cooked and cheese has melted.
     \item Place some sauce to cover the bottom of the bun. Place some shredded lettuce and tomatoes on the bottom bun. And the pickles, if desired, this keeps the burger from falling apart while eating.
     Complete the burger.
     \item For a fast-food look, wrap them in parchment paper. Start with a square parchment paper and fold into a triangle. Then place the straight edge on the middle of the burger. Then tuck both sides, followed by the end placed under the burger.
