--- a/dermardiros/foul.tex
+++ b/dermardiros/foul.tex
@@ -4,13 +4,13 @@
 \index{beans}
 
 \marginnote{
-    \textbf{Makes 1 bowl?} \\
-    Prep time: 10 minutes \\
-    Cook time: 20 minutes \\
+    \textbf{Makes 1~bowl?} \\
+    Prep time: 10~minutes \\
+    Cook time: 20~minutes \\
     \vspace*{\baselineskip}
 
-    1 can foul, brand? \\
-    1 onion, diced \\
+    1~can foul, brand? \\
+    1~onion, diced \\
     ? Water \\
     ? Lemons, juiced \\
     Olive oil \\
