--- a/dermardiros/frenchtoast.tex
+++ b/dermardiros/frenchtoast.tex
@@ -4,19 +4,19 @@
 \index{bread}
 
 \marginnote{
-    \textbf{Makes 8 half servings (or 4 full bread servings)} \\
-    Prep time: 15 minutes \\
+    \textbf{Makes 8~half servings (or 4~full bread servings)} \\
+    Prep time: 15~minutes \\
     \vspace*{\baselineskip}
 
-    2 extra large eggs \\
-    1/2 cup of milk \\
-    4 slices of standard white square bread, cut in half \\
+    2~extra large eggs \\
+    1/2~cup of milk \\
+    4~slices of standard white square bread, cut in half \\
     Butter, as needed \\
     \vspace*{\baselineskip}
 
 \textbf{Ingredients for the syrup} \\
-    1/4 cup granulated white sugar \\
-    1/2 cup water \\
+    1/4~cup granulated white sugar \\
+    1/2~cup water \\
     Few dashes of rose water
 }
 
@@ -27,7 +27,7 @@ Family member: Nene Hermine
 \begin{enumerate}
     \item In a bowl, whisk together the eggs and milk. Pour the whisked mixture into a shallow dish. Place the bread slices into dish to soak them, a few seconds on each side.
     \item Place soaked bread pieces on a plate. Repeat for all slices.
-    \item In a large frying pan over medium-low heat, warm some butter. When hot, add bread slices in the pan in one layer. Cook them until golden brown on each side, approximately 2-4 minutes per side. Remove from pan and stack them in a large bowl.
+    \item In a large frying pan over medium-low heat, warm some butter. When hot, add bread slices in the pan in one layer. Cook them until golden brown on each side, approximately 2-4~minutes per side. Remove from pan and stack them in a large bowl.
     \item For the syrup, add the water and sugar in a small saucepan. Add the rose water. Bring the mixture to a very low boil while continuously stirring. Remove from the heat.
     \item Add all the syrup to the bowl. The toasts will be fully coated with the watery syrup. The toasts will be slightly soggy after soaking up all the syrup.
 \end{enumerate}
