--- a/dermardiros/katnabour.tex
+++ b/dermardiros/katnabour.tex
@@ -5,14 +5,14 @@
 \index{pudding}
 
 \marginnote{
-    \textbf{Makes 1 bowl} \\
-    Prep time: 5 minutes \\
-    Cook time: 30 minutes \\
+    \textbf{Makes 1~bowl} \\
+    Prep time: 5~minutes \\
+    Cook time: 30~minutes \\
     \vspace*{\baselineskip}
 
-    1/2 cup rice, Calrose \\
-    3 cups milk, 2\% \\
-    3 tbsp sugar
+    1/2~cup rice, Calrose \\
+    3~cups milk, 2\% \\
+    3~tbsp sugar
 }
 
 \textit{Rice pudding}
@@ -24,8 +24,8 @@ Family member: Sybil
 \marginalfigure{dermardiros/images/Rice pudding.jpg}{Gatnabour made in Barcelona}{fig:gatnabour}
 
 \begin{enumerate}
-    \item In a pot, cook the rice in 1 cup of milk on low heat.
-    \item Gradually add 1 cup of milk at a time, once milk has been absorbed.
+    \item In a pot, cook the rice in 1~cup of milk on low heat.
+    \item Gradually add 1~cup of milk at a time, once milk has been absorbed.
     \item When all the milk has been added and the rice is cooked, add the sugar.
-    \item Cook on low heat for maximum 5 minutes then set the pot aside to cool.
+    \item Cook on low heat for maximum 5~minutes then set the pot aside to cool.
 \end{enumerate}
