--- a/dermardiros/keufte.tex
+++ b/dermardiros/keufte.tex
@@ -4,15 +4,15 @@
 \index{appetizer}
 
 \marginnote{
-    \textbf{Makes over 24 keufté} \\
-    Prep time: 15 minutes \\
-    Cook time: 45 minutes \\
+    \textbf{Makes over 24~keufté} \\
+    Prep time: 15~minutes \\
+    Cook time: 45~minutes \\
     \vspace*{\baselineskip}
 
-    2 lb ground beef, lean \\
-    1-2 tbsp fresh parsley, chopped \\
-    3 tbsp breadcrumbs \\
-    1-2 tbsp milk \\
+    2~lb ground beef, lean \\
+    1-2~tbsp fresh parsley, chopped \\
+    3~tbsp breadcrumbs \\
+    1-2~tbsp milk \\
     Cinnamon \\
     Salt and pepper \\
     Flour, for coating \\
@@ -24,7 +24,7 @@
 Family member: Nene Hermine
 
 \begin{enumerate}
-    \item In a small bowl, mix the breadcrumbs with 1 tbsp of milk. If too thick, add another tablespoon. You want the mix to be like a runny paste.
+    \item In a small bowl, mix the breadcrumbs with 1~tbsp of milk. If too thick, add another tablespoon. You want the mix to be like a runny paste.
     \item In a large bowl, add the ground beef, chopped parsley, breadcrumb slurry and a pinch of cinnamon. Season with salt and pepper, combine well.
     \item Shape the mixture into elongated ovals, in the shape of the picture in the margin. Place the shaped meatballs on a plate.
     \item Heat a pan with oil. Once hot, one by one, roll the meatballs in flour and fry. Serve hot!
