--- a/dermardiros/khorabie.tex
+++ b/dermardiros/khorabie.tex
@@ -6,19 +6,19 @@
 
 \marginnote{
     \textbf{Makes 24+ cookies} \\
-    Prep time: 2-3 hours \\
-    Cook time: 12-15 minutes \\
+    Prep time: 2-3~hours \\
+    Cook time: 12-15~minutes \\
     \vspace*{\baselineskip}
 
-    1 cup vegetable oil \\
-    1 cup milk \\
-    250 ml butter, melted, or unsalted margarine \\
-    1/2 packet of Crisco, melted \\
-    3 tsp baking powder \\
-    1 cup icing sugar \\
-    6 to 6-1/2 cups flour \\
-    1 kg dates, in puree, in a packet \\
-    Zest and juice of 1 orange
+    1~cup vegetable oil \\
+    1~cup milk \\
+    250~ml butter, melted, or unsalted margarine \\
+    1/2~packet of Crisco, melted \\
+    3~tsp baking powder \\
+    1~cup icing sugar \\
+    6~to 6-1/2~cups flour \\
+    1~kg dates, in puree, in a packet \\
+    Zest and juice of 1~orange
 }
 
 \textit{Biscuits aux dattes}
@@ -35,6 +35,6 @@ Family member: Metzma Lucie
     \item In a small bowl, mix the dates with the orange zest and orange juice.
     \item Shape balls of dough, make a small well in the center and stuff with the date filling. Enclose the dates in the center with the dough.
     \item Lightly flour the wooden khorabie mold and gently press the ball inside the mold to obtain a shape on one side.
-    \item Place the shaped cookies onto a baking sheet and bake 12-15 minutes on the middle rack at 350\degree F until the tops have a golden colour.
+    \item Place the shaped cookies onto a baking sheet and bake 12-15~minutes on the middle rack at 350\degree F until the tops have a golden colour.
     \item Let cool and sift some icing sugar on top. Enjoy with coffee or tea!
 \end{enumerate}
