--- a/dermardiros/koubeba.tex
+++ b/dermardiros/koubeba.tex
@@ -4,20 +4,20 @@
 \index{meat}
 
 \marginnote{
-    \textbf{Makes 1 round baking dish} \\
-    Prep time: 45 minutes \\
-    Cook time: 1 hour \\
+    \textbf{Makes 1~round baking dish} \\
+    Prep time: 45~minutes \\
+    Cook time: 1~hour \\
     \vspace*{\baselineskip}
     
     \textbf{Ingredients for koubeba layers} \\
-    2 cups bulgur, fin \#1 \\
-    500g ground beef, extra lean \\
+    2~cups bulgur, fin \#1 \\
+    500~g ground beef, extra lean \\
     Salt \& pepper \\
     \vspace*{\baselineskip}
     
     \textbf{Ingredients for filling} \\
-    500g ground beef, extra lean \\
-    1 onion, diced \\
+    500~g ground beef, extra lean \\
+    1~onion, diced \\
     All spice \\
     Pine nuts \\
     Corinthian raisins \\
@@ -31,13 +31,13 @@ Family member: Sybil
 
 \begin{enumerate}
     \item In a bowl, add the bulgur, cover with hot water and set aside.
-    \item Once soaked, use your hand to knead the soaked bulgur for a few minutes, until all is mashed together. Add it to a larger bowl with the 1/2 kg of ground meat, salt and pepper. Mix everything well and set aside.
-    \item For the filling, cook the onion with some oil on a pan until soft. Add the other 1/2 kg of ground meat and cook until meat is browned. Add the spices, raisins and pine nuts. Cook the filling until evenly browned and let it cool.
+    \item Once soaked, use your hand to knead the soaked bulgur for a few minutes, until all is mashed together. Add it to a larger bowl with the 1/2~kg of ground meat, salt and pepper. Mix everything well and set aside.
+    \item For the filling, cook the onion with some oil on a pan until soft. Add the other 1/2~kg of ground meat and cook until meat is browned. Add the spices, raisins and pine nuts. Cook the filling until evenly browned and let it cool.
     \item Grease a 12-inch round baking dish with olive oil.
     \item Using your hands, spread half of the koubeba mixture evenly on the bottom of the greased baking dish.
     \item Spoon all the filling on top of the bottom layer.
     \item Using the remaining koubeba mixture, spread it evenly on top of the filling and press it until no more middle layer shows. Use water as needed to create a smooth top layer.
     \item Using a large Knife, slice the Koubeba diagonally to form diamond-shaped slices. Poke holes with a souvlaki stick and pour a mixture of melted butter and oil in the holes. You can top with pine nuts over each slice if you want to be fancy and drizzle with a little olive oil.
-    \item Bake at 350\degree F for about 45 minutes, until top is browned.
+    \item Bake at 350\degree F for about 45~minutes, until top is browned.
     \item Once cool, eat with yogurt!
 \end{enumerate}
