--- a/dermardiros/mantuh.tex
+++ b/dermardiros/mantuh.tex
@@ -5,22 +5,22 @@
 \index{meat}
 
 \marginnote{
-    \textbf{Makes 2 full pans} \\
-    Prep time: 2-3 hours \\
-    Cook time: 30 minutes \\
+    \textbf{Makes 2~full pans} \\
+    Prep time: 2-3~hours \\
+    Cook time: 30~minutes \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for dough} \\
-    4 cups all-purpose flour \\
-    1/4 cup milk \\
-    1/2 tsp salt \\
-    1 cup lukewarm water + 1/4 - 1/2 cup more (as much as dough takes) \\
+    4~cups all-purpose flour \\
+    1/4~cup milk \\
+    1/2~tsp salt \\
+    1~cup lukewarm water + 1/4 - 1/2~cup more (as much as dough takes) \\
     Oil (to work dough with hands) \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for meat} \\
-    1 medium onion, thinly chopped \\
-    1 lb ground lean beef \\
+    1~medium onion, thinly chopped \\
+    1~lb ground lean beef \\
     Salt \& pepper to taste \\
     Armenian or Lebanese pepper
 }
@@ -30,21 +30,21 @@
 Family member: Metzma Lucie
 
 \begin{enumerate}
-    \item Chop onion and cook in a medium pot for 1-2 minutes until soft.
+    \item Chop onion and cook in a medium pot for 1-2~minutes until soft.
     \item Add lean ground beef, salt, pepper and Armenian pepper.
     \item Cook until little or no water is left from the meat.
 
     % TODO: did we want to split this up into sections?
     \item In a large bowl, mix flour and salt.
-    \item Mix in milk using a spoon. Add 1 cup water and mix with hands.
+    \item Mix in milk using a spoon. Add 1~cup water and mix with hands.
     \item Add a little oil to hands to help dough unstick.
-    \item Add 1/4 - 1/2 cup water slowly while mixing, until you get a soft dough.
-    \item You can add up to 2 handfuls of oil.
+    \item Add 1/4 - 1/2~cup water slowly while mixing, until you get a soft dough.
+    \item You can add up to 2~handfuls of oil.
 
     \item Flatten dough using a rolling pin or a pasta machine.
     \item Cut into 1.5-inch squares, fill with some meat and pinch sides.
     \item Place month on a baking sheet lined with parchment paper, leaving some space between each.
-    \item Cook at 350\degree F for about 30 minutes, until evenly browned.
+    \item Cook at 350\degree F for about 30~minutes, until evenly browned.
     \item Eat with yogurt, sriracha and sprinkle with sumac!
 \end{enumerate}
 
