--- a/dermardiros/mantuhshahinian.tex
+++ b/dermardiros/mantuhshahinian.tex
@@ -6,19 +6,19 @@
 \index{yogurt}
 
 \marginnote{
-    \textbf{Makes 6-8 servings} \\
-    Prep time: 30 minutes \\
-    Cook time: 35-45 minutes \\
+    \textbf{Makes 6-8~servings} \\
+    Prep time: 30~minutes \\
+    Cook time: 35-45~minutes \\
     \vspace*{\baselineskip}
 
-    1.5kg ground beef, lean \\
-    2 onions, chopped \\
+    1.5~kg ground beef, lean \\
+    2~onions, chopped \\
     Cinnamon, optional \\
     Salt and pepper \\
-    3 garlic cloves, crushed \\
-    1kg Balkan Yogurt 6\% fat, Astro brand \\
+    3~garlic cloves, crushed \\
+    1~kg Balkan Yogurt 6\% fat, Astro brand \\
     Canola oil \\
-    2 packets (500g) of pasta Rigatoni
+    2~packets (500~g) of pasta Rigatoni
 }
 
 Family member: Sybil
@@ -30,5 +30,5 @@ Family member: Sybil
     \item Meanwhile, prepare the pasta following the package instructions.
     \item Preheat oven to 350\degree F. In a bowl, mix the yogurt with the crushed garlic and a pinch of salt.
     \item In a large ovenproof dish, spread the pasta evenly. Layer the cooked meat on top, then the yogurt in one layer. Finish by adding the caramelized onion on top of the yogurt.
-    \item Bake in the preheated oven for about 35-45 minutes.
+    \item Bake in the preheated oven for about 35-45~minutes.
 \end{enumerate}
