--- a/dermardiros/meatpies.tex
+++ b/dermardiros/meatpies.tex
@@ -6,23 +6,23 @@
 \index{brunch}
 
 \marginnote{
-    \textbf{Makes 6 meat pies} \\
-    Prep time: 3 hours \\
-    Cook time: 45 minutes, or 20 minutes for partially cooked (frozen) pies \vspace*{\baselineskip}
+    \textbf{Makes 6~meat pies} \\
+    Prep time: 3~hours \\
+    Cook time: 45~minutes, or 20~minutes for partially cooked (frozen) pies \vspace*{\baselineskip}
 
-    5 pounds minced veal (2.3kg) \\
-    4 pounds minced pork (1.8kg) \\
-    2 pounds minced lean beef (907g or 1kg) \\
+    5~pounds minced veal (2.3~kg) \\
+    4~pounds minced pork (1.8~kg) \\
+    2~pounds minced lean beef (907~g or 1~kg) \\
     Small pack of bacon with maple \\
     Becel margarine \\
-    1/4 onion chopped in small pieces \\
-    5 tsp Provence spices \\
+    1/4~onion chopped in small pieces \\
+    5~tsp Provence spices \\
     Black pepper \\
-    3 cups of red or white wine \\
-    1 1/2 cups of Italian bread crumbs (up to 3 cups if needed) \\
-    2 packages of pie dough from Metro (Francois Hubert pie dough 1kg makes 5 bases) \\
+    3~cups of red or white wine \\
+    1 1/2~cups of Italian bread crumbs (up to 3~cups if needed) \\
+    2~packages of pie dough from Metro (Francois Hubert pie dough 1~kg makes 5~bases) \\
     Flour \\
-    2 eggs
+    2~eggs
 }
 
 Family member: Aunt Joanne
@@ -31,13 +31,13 @@ Family member: Aunt Joanne
     \item Place the bacon on parchment paper on a tray and cook it in the oven. Once cooked, place it in bowl.
     \item Put margarine in a frying pan and cook the onion until soft; remove it and put it in bowl.
     \item Put margarine in a frying pan and cook the minced meats, sprinkling the Provence spice and pepper as they cook.
-    \item When all is cooked, mix the 3 meats, onion and bacon, and split into 2 big casseroles to further cook on stove top. Add the wine, split into both casseroles. Cook for 20 minutes on low heat, stirring occasionally.
+    \item When all is cooked, mix the 3~meats, onion and bacon, and split into 2~big casseroles to further cook on stove top. Add the wine, split into both casseroles. Cook for 20~minutes on low heat, stirring occasionally.
     \item Add the breadcrumbs, split into both casseroles containing the meat mixture.
-    \item Let stand 10 minutes. If enough liquid is absorbed by the breadcrumbs, no need to add any more. If not, add more breadcrumbs until excess liquid is absorbed. Set aside to cool.
+    \item Let stand 10~minutes. If enough liquid is absorbed by the breadcrumbs, no need to add any more. If not, add more breadcrumbs until excess liquid is absorbed. Set aside to cool.
     \item Preheat the oven to 500\degree F.
-    \item On a floured work surface, roll out the pie dough and cut it in 6 sections. Line 8-9 inch pie pans with the first circle of pie dough and divide the meat filling into all 6 pans. Roll out remaining pie dough into circles and place a second circle of pie dough over each pie, covering the meat mixture.
+    \item On a floured work surface, roll out the pie dough and cut it in 6~sections. Line 8-9~inch pie pans with the first circle of pie dough and divide the meat filling into all 6~pans. Roll out remaining pie dough into circles and place a second circle of pie dough over each pie, covering the meat mixture.
     \item Cut some steam vents in the centre of the crust. Seal the edges together with fork, then cut off excess.
     \item In a bowl, beat the eggs and brush the crust with the egg wash. Transfer the pies to the oven.
-    \item Reduce temperature to 400\degree F and bake until the meat pies are golden brown, about 45 minutes.
-    \item For frozen pies, partially bake them; only bake for 20 minutes and let them cool. Place an aluminum paper on top of each pie and then put them in a large freezer bag. Freeze. To reheat frozen pies, bake about 30 minutes, checking when the crust is golden.
+    \item Reduce temperature to 400\degree F and bake until the meat pies are golden brown, about 45~minutes.
+    \item For frozen pies, partially bake them; only bake for 20~minutes and let them cool. Place an aluminum paper on top of each pie and then put them in a large freezer bag. Freeze. To reheat frozen pies, bake about 30~minutes, checking when the crust is golden.
 \end{enumerate}
