--- a/dermardiros/quiche.tex
+++ b/dermardiros/quiche.tex
@@ -6,16 +6,16 @@
 \index{brunch}
 
 \marginnote{
-    \textbf{Makes 1 quiche} \\
-    Prep time: 30-45 minutes \\
-    Cook time: 45 minutes \\
+    \textbf{Makes 1~quiche} \\
+    Prep time: 30-45~minutes \\
+    Cook time: 45~minutes \\
     \vspace*{\baselineskip}
 
     Half the pie dough \\
-    320 grams of shredded cheese, Italian 4 cheese \\
-    6 slices of ham, cut \\
-    5 eggs \\
-    1 cup (250 ml) 15\% cooking cream \\
+    320~grams of shredded cheese, Italian 4~cheese \\
+    6~slices of ham, cut \\
+    5~eggs \\
+    1~cup (250~ml) 15\% cooking cream \\
     Pepper
 }
 
@@ -24,11 +24,11 @@
 Family member: Sybil
 
 \begin{enumerate}
-    \item Prepare a 9 inch pie plate with the pie dough.
+    \item Prepare a 9~inch pie plate with the pie dough.
     \item In a bowl, mix the cream and eggs with a whisk. Add the cut ham and shredded cheese.
     \item Preheat oven to 350\degree F.
     \item Pour the mix on the pie crust and top with ground pepper.
-    \item Bake for 1 hour at 350\degree F.
+    \item Bake for 1~hour at 350\degree F.
 \end{enumerate}
 
 You can replace half of the 15\% cooking cream with milk.
