--- a/dermardiros/souloukefteh.tex
+++ b/dermardiros/souloukefteh.tex
@@ -5,30 +5,30 @@
 \index{soup}
 
 \marginnote{
-    \textbf{Makes 4 servings} \\
+    \textbf{Makes 4~servings} \\
     Prep time: \\
-    Cook time: 3 1/2-4 hours \\
+    Cook time: 3 1/2-4~hours \\
     \vspace*{\baselineskip}
     
     \textbf{Ingredients for stock} \\
-    1 beef shank or 2 veal shanks (about 1 lb) \\
-    1 large yellow onion \\ 
-    2 bay leaves \\
-    8-10 cups of water \\
-    1 tsp tomato paste \\
+    1~beef shank or 2~veal shanks (about 1~lb) \\
+    1~large yellow onion \\ 
+    2~bay leaves \\
+    8-10~cups of water \\
+    1~tsp tomato paste \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for soup} \\
     Reserved stock \\ 
-    1 lb ground beef \\
-    1/2 large yellow onion \\
-    1/4 cup rice, Calrose \\
-    1/2 cup parsley, chopped \\
-    1 egg \\
+    1~lb ground beef \\
+    1/2~large yellow onion \\
+    1/4~cup rice, Calrose \\
+    1/2~cup parsley, chopped \\
+    1~egg \\
     Salt \& pepper to taste
-    3 white or Russet potatoes, cubed \\
+    3~white or Russet potatoes, cubed \\
     Carrots, chopped (optional) \\
-    1/4 cup rice, Calrose (or orzo) 
+    1/4~cup rice, Calrose (or orzo) 
 }
 
 \textit{Soupe boulettes de viande}
@@ -36,10 +36,10 @@
 Family member: Metzma Lucie
 
 \begin{enumerate}
-    \item Add all the ingredients for the stock except the tomato paste in a large pot and bring it to a boil. Cook for 2.5 hours.
+    \item Add all the ingredients for the stock except the tomato paste in a large pot and bring it to a boil. Cook for 2.5~hours.
     \item Remove the shank, take off the meat and add it to the stock. Remove the onion dd the tomato paste and mix.
-    \item In a bowl, grate the onion and mix it with the meat, rice, parsley and egg. Add salt and pepper and let stand for about 15 minutes.
+    \item In a bowl, grate the onion and mix it with the meat, rice, parsley and egg. Add salt and pepper and let stand for about 15~minutes.
     \item Form 1.5-inch balls of the meat mixture while bringing the stock to a boil.
-    \item Add the meatballs and reserved 1/4 cup rice (or orzo). Reduce to a simmer.
-    \item After 15 minutes, add the potatoes (and carrots if using) and continue cooking for 30 minutes to 1 hour.
+    \item Add the meatballs and reserved 1/4~cup rice (or orzo). Reduce to a simmer.
+    \item After 15~minutes, add the potatoes (and carrots if using) and continue cooking for 30~minutes to 1~hour.
 \end{enumerate}
