--- a/dermardiros/strawberrysalad.tex
+++ b/dermardiros/strawberrysalad.tex
@@ -4,23 +4,23 @@
 \index{fruit}
 
 \marginnote{
-    \textbf{Makes 8 servings} \\
-    Prep time: 20 minutes \\
-    Cook time: 7-10 minutes \\
+    \textbf{Makes 8~servings} \\
+    Prep time: 20~minutes \\
+    Cook time: 7-10~minutes \\
     \vspace*{\baselineskip}
     
-    140 grams of arugula lettuce \\
-    420 grams (1 basket) of fresh Quebec strawberries \\
-    3/4 cup of pecans \\
-    1/2 cup of virgin olive oil \\
-    1/4 cup of balsamic vinegar \\
-    1/4 cup of maple syrup 
+    140~grams of arugula lettuce \\
+    420~grams (1~basket) of fresh Quebec strawberries \\
+    3/4~cup of pecans \\
+    1/2~cup of virgin olive oil \\
+    1/4~cup of balsamic vinegar \\
+    1/4~cup of maple syrup 
 }
 
 Family member: Aunt Joanne
 
 \begin{enumerate}
-    \item Preheat your oven to 350\degree F. Spread the pecans evenly onto a rimmed baking sheet and bake for 7 to 10 minutes, until they begin to brown and become aromatic, making sure to toss halfway through. Remove from the oven and let cool.
+    \item Preheat your oven to 350\degree F. Spread the pecans evenly onto a rimmed baking sheet and bake for 7~to 10~minutes, until they begin to brown and become aromatic, making sure to toss halfway through. Remove from the oven and let cool.
     \item In the meantime, place the arugula in a chilled large salad bowl.
     \item Wash and slice the strawberries and add them to the bowl.
     \item In a cup, prepare your dressing by combining the olive oil, balsamic vinegar and maple syrup.
