--- a/dermardiros/tahini.tex
+++ b/dermardiros/tahini.tex
@@ -4,13 +4,13 @@
 \index{sesame}
 
 \marginnote{
-    \textbf{Makes 1 large bowl} \\
-    Prep time: 15 minutes \\
+    \textbf{Makes 1~large bowl} \\
+    Prep time: 15~minutes \\
     \vspace*{\baselineskip}
 
-    1 cup tahini \\
-    1/2 cup water \\
-    Juice of 5 lemons \\
+    1~cup tahini \\
+    1/2~cup water \\
+    Juice of 5~lemons \\
     Garlic, finely chopped \\
     Cumin \\
     Salt
