--- a/monanteras/chickenwithgarlic.tex
+++ b/monanteras/chickenwithgarlic.tex
@@ -5,12 +5,12 @@
 \index{garlic}
 
 \marginnote{
-    \textbf{Makes 6 servings} \\
-    Prep time: 15 minutes \\
-    Cook time: 45 minutes \\
+    \textbf{Makes 6~servings} \\
+    Prep time: 15~minutes \\
+    Cook time: 45~minutes \\
     \vspace*{\baselineskip}
 
-    4 chicken breasts \\
+    4~chicken breasts \\
     As many garlic cloves as you like, cut in large pieces or left whole \\
     Lemon \\
     Olive oil \\
