--- a/monanteras/chocolate_cake.tex
+++ b/monanteras/chocolate_cake.tex
@@ -5,31 +5,31 @@
 \index{chocolate}
 
 \marginnote{
-    \textbf{Makes 1 layered cake} \\
-    Prep time: 2-3 hours + cooling time \\
-    Cook time: 20-25 minutes \\
+    \textbf{Makes 1~layered cake} \\
+    Prep time: 2-3~hours + cooling time \\
+    Cook time: 20-25~minutes \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for cake} \\
-    6 eggs, separated \\
-    5 tbsp icing sugar, sifted \\
-    4 tbsp breadcrumbs, Grisset brand, sifted \\
-    1 tsp vanilla extract \\
-    1 tsp baking powder, sifted \\
+    6~eggs, separated \\
+    5~tbsp icing sugar, sifted \\
+    4~tbsp breadcrumbs, Grisset brand, sifted \\
+    1~tsp vanilla extract \\
+    1~tsp baking powder, sifted \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for chocolate icing} \\
-    1/2 cup butter, unsalted and at room temperature \\
-    1 cup icing sugar, sifted \\
-    2 eggs, separated \\
-    3-4 tsp cocoa powder, Fry's brand and sifted \\
-    1/2 tsp vanilla aroma or extract \\
+    1/2~cup butter, unsalted and at room temperature \\
+    1~cup icing sugar, sifted \\
+    2~eggs, separated \\
+    3-4~tsp cocoa powder, Fry's brand and sifted \\
+    1/2~tsp vanilla aroma or extract \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for syrup} \\
-    1 glass water \\
-    1 glass sugar \\
-    1 tbsp lemon juice \\
+    1~glass water \\
+    1~glass sugar \\
+    1~tbsp lemon juice \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for assembly} \\
@@ -44,16 +44,16 @@ Family member: Grandma Eleni
 
 \twosidecaptionfigure{monanteras/images/Chocolate cake 2.jpg}{monanteras/images/Chocolate cake.jpg}{(Left) Celebrating Grandma's 80$^{th}$ birthday, (Right) The Chocolate Cake}{fig:chocolatecake}
 
-\newthought{Grandma} \textgreek{Ελένη} would make this cake for every celebration. We all love this cake, but remember how decadent and syrupy it was. My grandpa would always say that she should put more syrup next time! I dare you to have only 1 slice.
+\newthought{Grandma} \textgreek{Ελένη} would make this cake for every celebration. We all love this cake, but remember how decadent and syrupy it was. My grandpa would always say that she should put more syrup next time! I dare you to have only 1~slice.
 
 \begin{enumerate}
-    \item Preheat oven to 350\degree F and grease 3 round 9-inch metal pans well.
-    \item In a mixing bowl, whip the 6 egg whites until you obtain a meringue. Transfer them to another bowl and keep them in the fridge.
+    \item Preheat oven to 350\degree F and grease 3~round 9-inch metal pans well.
+    \item In a mixing bowl, whip the 6~egg whites until you obtain a meringue. Transfer them to another bowl and keep them in the fridge.
     \item Clean the mixing bowl and whip the egg yolks with the icing sugar until they will become pale and fluffy. Add the sifted breadcrumbs, baking powder and vanilla gradually while whisking. Fold in the egg whites carefully to obtain a well-mixed batter.
-    \item Divide the mix into the 3 greased pans and bake for 20-25 minutes, until a toothpick comes out clean and they are light brown.
-    \item While the cakes cool, prepare the icing. In the same way as the cake, whip the 2 egg whites until you obtain a meringue in the mixer. Transfer them to another bowl and keep them in the fridge. Clean the bowl, then mix the softened butter with the icing sugar until they are pale and creamy. Add the egg yolks, mix, then the sifted cocoa powder and vanilla extract. Mix well, then fold in the meringue gently until you get an icing with no streaks.
+    \item Divide the mix into the 3~greased pans and bake for 20-25~minutes, until a toothpick comes out clean and they are light brown.
+    \item While the cakes cool, prepare the icing. In the same way as the cake, whip the 2~egg whites until you obtain a meringue in the mixer. Transfer them to another bowl and keep them in the fridge. Clean the bowl, then mix the softened butter with the icing sugar until they are pale and creamy. Add the egg yolks, mix, then the sifted cocoa powder and vanilla extract. Mix well, then fold in the meringue gently until you get an icing with no streaks.
     \item Next prepare the syrup. In a small pot, bring the water, sugar and lemon juice to a boil. Boil until it thickens. To check the thickness, drop some syrup on your hand until a droplet forms. Let it cool slightly.
-    \item To assemble, sprinkle the cooled cakes with Metaxa, 1 tbsp per each cake round. Pour the cooled syrup on the cakes, dividing it among the 3 cakes. Leave the cakes absorb the syrup for at least 1 hour.
+    \item To assemble, sprinkle the cooled cakes with Metaxa, 1~tbsp per each cake round. Pour the cooled syrup on the cakes, dividing it among the 3~cakes. Leave the cakes absorb the syrup for at least 1~hour.
     \item When ready to assemble, unmold the cakes. Place the first layer on a glass platter and spread some icing over it with an offset spatula. Place the second cake layer, spread more icing. Make sure not to use too much icing to have enough to frost the cake. Finally, put the last layer, top-side down.
     \item Frost the cake, starting with the top, then working on the sides. Don't fuss over it being even because on the next step you need to cover all the cake with the grated chocolate. Decorate the top with red maraschino cherries.
     \item Let the cake set a few hours, best overnight, before slicing!
