--- a/monanteras/diples.tex
+++ b/monanteras/diples.tex
@@ -6,12 +6,12 @@
 
 \marginnote{
     \textbf{Makes 12+ servings} \\
-    Prep time: 45 minutes \\
-    Cook time: 1 hour \\
+    Prep time: 45~minutes \\
+    Cook time: 1~hour \\
     \vspace*{\baselineskip}
 
-    4 eggs \\
-    4 small water glasses of sugar \\
+    4~eggs \\
+    4~small water glasses of sugar \\
     Flour, all-purpose, as much as the dough takes \\
     Greek honey \\
     Walnuts, crushed \\
@@ -24,7 +24,7 @@
 
 Family member: Grandma Elisavet
 
-\newthought{Every Christmas} my grandma would make \textgreek{δίπλες}. A traditional Greek dessert from the Peloponnessos, diples are light and airy fried dough dipped in honey, walnuts and dusted with cinnamon. They can be kept for 1-2 weeks in a plastic container, lined with plastic wrap.
+\newthought{Every Christmas} my grandma would make \textgreek{δίπλες}. A traditional Greek dessert from the Peloponnessos, diples are light and airy fried dough dipped in honey, walnuts and dusted with cinnamon. They can be kept for 1-2~weeks in a plastic container, lined with plastic wrap.
 
 \begin{enumerate}
     \item In a large bowl, mix the eggs with the sugar.
