--- a/monanteras/dolmadakia.tex
+++ b/monanteras/dolmadakia.tex
@@ -7,27 +7,27 @@
 \index{vine leaves}
 
 \marginnote{
-    \textbf{Makes 6-8 servings} \\
-    Prep time: 30-40 minutes \\
-    Cook time: 45 minutes \\
+    \textbf{Makes 6-8~servings} \\
+    Prep time: 30-40~minutes \\
+    Cook time: 45~minutes \\
     \vspace*{\baselineskip}
 
     \textbf{Dolmadakia ingredients} \\
-    40 large grape leaves, blanched OR 1 jar of grape leaves in brine, Cedar \\
-    2 lbs lean ground beef \\
-    1 cup medium grain rice, uncooked \\
-    2 large eggs \\
-    1 large onion, finely diced \\
-    1 tablespoon fresh parsley, finely chopped \& stems removed \\
-    1 tablespoon fresh mint, finely chopped \& stems removed \\
-    1 tablespoon fresh dill, finely chopped \& stems removed \\
+    40~large grape leaves, blanched OR 1~jar of grape leaves in brine, Cedar \\
+    2~lbs lean ground beef \\
+    1~cup medium grain rice, uncooked \\
+    2~large eggs \\
+    1~large onion, finely diced \\
+    1~tablespoon fresh parsley, finely chopped \& stems removed \\
+    1~tablespoon fresh mint, finely chopped \& stems removed \\
+    1~tablespoon fresh dill, finely chopped \& stems removed \\
     Salt and pepper \\
-    1 tbsp olive oil \\
+    1~tbsp olive oil \\
     \vspace*{\baselineskip}
 
     \textbf{Avgolemono Sauce ingredients} \\
-    3 large eggs \\
-    2 lemons, juiced \\
+    3~large eggs \\
+    2~lemons, juiced \\
     Salt and pepper
 }
 
@@ -38,12 +38,12 @@ Family member: Grandma Eleni
 \newthought{The dolmadakia} that Grandma Eleni would make are similar to Sarma, but would have Avgolemono, an egg-lemon creamy sauce. You can also make them yalatzi (only with rice and herbs) during lent. I remember her and my grandfather telling us they would pick the vine leaves from their neighbors' yards in their neighborhood in Laval!
 
 \begin{enumerate}
-    \item Blanch the vine leaves if using fresh. Fill a large bowl with cold water and ice cubes. Fill a large pot 2/3 of the way with water and bring to a boil. Once the water is boiling, place several leaves in the pot with a laddle. Press the leaves down gently with a ladle to ensure they are fully submerged in the boiling water. After 1-2 minutes or when the leaves are wilted, remove them from the water and immediately submerge them in ice water. Remove the leaves from the ice water with the strainer ladle and put them on a plate. Pat the grape leaves with a paper towel. If using jarred vine leaves, simply put the leaves on a paper towel and pat them dry.
+    \item Blanch the vine leaves if using fresh. Fill a large bowl with cold water and ice cubes. Fill a large pot 2/3~of the way with water and bring to a boil. Once the water is boiling, place several leaves in the pot with a laddle. Press the leaves down gently with a ladle to ensure they are fully submerged in the boiling water. After 1-2~minutes or when the leaves are wilted, remove them from the water and immediately submerge them in ice water. Remove the leaves from the ice water with the strainer ladle and put them on a plate. Pat the grape leaves with a paper towel. If using jarred vine leaves, simply put the leaves on a paper towel and pat them dry.
     \item Next, prepare the stuffing: in a large bowl, add the ground beef, uncooked rice, eggs, onions, fresh herbs, salt, pepper and olive oil. Do not overwork the filling or it will be too dense.
-    \item Line the bottom of a large wide pot with teared vines leaves. Roll the vine leaves with the filling. Place each into the pot tightly together, seam-side down. Continue until they are all in the pot, layering them to a maximum of 4 layers. Drizzle 1 tbsp of olive oil and some salt on very top.
-    \item Add 1-2 cups water, or more, until they are all covered. Put a large plate over the dolmadakia to keep them from moving while they cook. Place the pot on the stove, cover and heat on high. When it comes to a boil, reduce the heat to medium. Reduce the heat once simmering and cook for 45 minutes to 1 hour, they are done when the rice and meat are fully cooked. Add some more water while cooking if needed to keep them covered while cooking.
+    \item Line the bottom of a large wide pot with teared vines leaves. Roll the vine leaves with the filling. Place each into the pot tightly together, seam-side down. Continue until they are all in the pot, layering them to a maximum of 4~layers. Drizzle 1~tbsp of olive oil and some salt on very top.
+    \item Add 1-2~cups water, or more, until they are all covered. Put a large plate over the dolmadakia to keep them from moving while they cook. Place the pot on the stove, cover and heat on high. When it comes to a boil, reduce the heat to medium. Reduce the heat once simmering and cook for 45~minutes to 1~hour, they are done when the rice and meat are fully cooked. Add some more water while cooking if needed to keep them covered while cooking.
     \item Prepare the Avgolemono Sauce: in a bowl, whisk the eggs until very foamy. Slowly pour in the lemon juice while whisking, until creamy and foamy. Add salt and pepper to taste. Then once the dolmadakia are cooked and still warm, pour the Avgolemono Sauce over the dolmadakia, then turning the pot to spread the sauce.
-    \item Let rest 20-30 minutes before serving. These can be eaten warm or cold.
+    \item Let rest 20-30~minutes before serving. These can be eaten warm or cold.
 \end{enumerate}
 
 \twosidecaptionfigure{monanteras/images/Dolmadakia2.JPG}{monanteras/images/Dolmadakia.JPG}{Dolmadakia}{fig:dolmadakia}
