--- a/monanteras/eastereggs.tex
+++ b/monanteras/eastereggs.tex
@@ -3,15 +3,15 @@
 \index{Easter}
 
 \marginnote{
-    \textbf{Makes 48 painted eggs} \\
-    Prep time: 10 minutes \\
-    Cook time: 20 minutes \\
+    \textbf{Makes 48~painted eggs} \\
+    Prep time: 10~minutes \\
+    Cook time: 20~minutes \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for cookies} \\
-    48 eggs \\
-    1 pack of Red Dye for Eggs, Rida \\
-    1/2 cup vinegar \\
+    48~eggs \\
+    1~pack of Red Dye for Eggs, Rida \\
+    1/2~cup vinegar \\
     Vegetable oil
 }
 
@@ -23,8 +23,8 @@ Family member: Mom
 
 \begin{enumerate}
     \item Boil the eggs and cool them.
-    \item Empty the colour in the pot filled with 1 liter of lukewarm water and the vinegar.
-    \item Add enough eggs to be fully covered with the coloured water. After 5 minutes, remove the eggs and place them on paper towel to drain the water.
+    \item Empty the colour in the pot filled with 1~liter of lukewarm water and the vinegar.
+    \item Add enough eggs to be fully covered with the coloured water. After 5~minutes, remove the eggs and place them on paper towel to drain the water.
     \item Wipe the eggs with some vegetable oil.
     \item Using the same coloured water, do the same with the rest of the eggs.
 \end{enumerate}
