--- a/monanteras/fassolakia.tex
+++ b/monanteras/fassolakia.tex
@@ -6,17 +6,17 @@
 
 \marginnote{
     \textbf{Makes 8+ servings} \\
-    Prep time: 15-20 minutes \\
-    Cook time: 1-2 hours \\
+    Prep time: 15-20~minutes \\
+    Cook time: 1-2~hours \\
     \vspace*{\baselineskip}
 
-    1 large onion, chopped \\
-    1 bag green beans \\
-    1 can tomato sauce, Hunt's (213ml) \\
-    1/2 cup parsley, chopped \\
+    1~large onion, chopped \\
+    1~bag green beans \\
+    1~can tomato sauce, Hunt's (213~ml) \\
+    1/2~cup parsley, chopped \\
     Salt \\
     Oil \\
-    3-5 red potatoes, peeled and quartered (keep in cold water)
+    3-5~red potatoes, peeled and quartered (keep in cold water)
 }
 
 \textit{Green beans with potatoes}
@@ -30,9 +30,9 @@ Family member: Mom
     \item Drizzle a little of oil in a large pot, add onion once heated. Cook on medium heat.
     \item When the onion is translucent, add the green beans and mix. Add the tomato sauce, stir and add water until all the beans are covered.
     \item Add chopped parsley, salt and mix.
-    \item Bring to a boil and keep it simmering uncovered until the beans are softened, about 45 minutes.
+    \item Bring to a boil and keep it simmering uncovered until the beans are softened, about 45~minutes.
     \item Add the potatoes and keep cooking. Add a little water if necessary to cover potatoes.
-    \item When you can poke the potatoes with a knife and the sauce has reduced, remove the pot from the heat and cover. Let cool for about 1 hour before eating.
+    \item When you can poke the potatoes with a knife and the sauce has reduced, remove the pot from the heat and cover. Let cool for about 1~hour before eating.
 \end{enumerate}
 
 Eat with a large piece of feta and village bread!
