--- a/monanteras/karidopita.tex
+++ b/monanteras/karidopita.tex
@@ -11,21 +11,21 @@
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for cake} \\
-    2 1/2 cups all-purpose flour (Monarch Cake \& pastry flour **put picture**) \\
-    8 eggs \\
-    2 cups sugar \\
-    1 cup gingerale \\
-    1 cup walnuts \\
-    1 cup vegetable oil \\
-    1 tsp baking soda \\
-    1 tsp baking powder \\
-    1/2 tsp cinnamon \\
-    1/2 tsp cloves \\
+    2 1/2~cups all-purpose flour (Monarch Cake \& pastry flour **put picture**) \\
+    8~eggs \\
+    2~cups sugar \\
+    1~cup gingerale \\
+    1~cup walnuts \\
+    1~cup vegetable oil \\
+    1~tsp baking soda \\
+    1~tsp baking powder \\
+    1/2~tsp cinnamon \\
+    1/2~tsp cloves \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for syrup} \\
-    3 cups sugar \\
-    2 cups water 
+    3~cups sugar \\
+    2~cups water 
 }
 
 \textit{Walnut cake with syrup}
@@ -36,8 +36,8 @@ Family member: Grandma Eleni
 
 \begin{enumerate}
     \item In a large bowl, mix all the ingredients for the cake using a whisk. Leave the gingerale for last.
-    \item Pour into a 12~x~18 inch sized metal pan. Bake at 350\degree F for ? minutes.
-    \item While cake is baking, make the syrup. Put the sugar and water in a medium pot and mix. Heat until it simmers and let it boil for 5 minutes. Remove from the heat and let it cool.
+    \item Pour into a 12~x~18~inch sized metal pan. Bake at 350\degree F for ? minutes.
+    \item While cake is baking, make the syrup. Put the sugar and water in a medium pot and mix. Heat until it simmers and let it boil for 5~minutes. Remove from the heat and let it cool.
     \item Once the cake is done and has a golden colour, remove from the oven. Pour all of the cooled syrup onto the warm cake.
     \item Let the cake cool and cut into diamond shapes.
 \end{enumerate}
