--- a/monanteras/lamb and potatoes.tex
+++ b/monanteras/lamb and potatoes.tex
@@ -6,18 +6,18 @@
 
 \marginnote{
     \textbf{Makes 8+ servings} \\
-    Prep time: 45 minutes \\
-    Cook time: 1 1/2 - 2 hours \\
+    Prep time: 45~minutes \\
+    Cook time: 1 1/2 - 2~hours \\
     \vspace*{\baselineskip}
 
-    1 leg of lamb \\
+    1~leg of lamb \\
     Salt \\
     Pepper \\
-    3 cloves of garlic, chopped \\
+    3~cloves of garlic, chopped \\
     Olive oil \\
     Oregano \\
-    2 lemons, juiced \\
-    4 red potatoes, peeled and quartered
+    2~lemons, juiced \\
+    4~red potatoes, peeled and quartered
 }
 
 Family member: Mom \& Dad
@@ -26,8 +26,8 @@ Family member: Mom \& Dad
     \item Preheat oven to 350\degree F.
     \item Prepare the leg of lamb: cut the leg into pieces or leave it whole and add it to a large bowl.  Add olive oil, salt, freshly ground pepper and oregano on all its sides, and toss it well. Pierce the leg with a knife and put the pieces of garlic inside. Place the lamb in a large baking dish or roasting pan.
     \item In a bowl, toss the potatoes with olive oil, salt, pepper and oregano and add them to the baking dish.
-    \item Pour the lemon juice on the lamb and potatoes, then add 1 cup of water.
-    \item Place in the oven uncovered for 1 hour and a half, or until the potatoes are soft and can be pierced easily with a knife. You can add 30 min to make sure there the top of the lamb is crispy!
+    \item Pour the lemon juice on the lamb and potatoes, then add 1~cup of water.
+    \item Place in the oven uncovered for 1~hour and a half, or until the potatoes are soft and can be pierced easily with a knife. You can add 30~min to make sure there the top of the lamb is crispy!
 \end{enumerate}
 
 \twosidecaptionfigure{monanteras/images/Lamb.jpg}{monanteras/images/Lamb 2.jpg}{(Left) Lamb before putting it in the oven, (Right) Lamb after cooking}{fig:lambpotatoes}
