--- a/monanteras/lasagna.tex
+++ b/monanteras/lasagna.tex
@@ -7,18 +7,18 @@
 
 \marginnote{
     \textbf{Makes 8+ servings} \\
-    Prep time: 30-45 minutes \\
-    Cook time: 35 minutes \\
+    Prep time: 30-45~minutes \\
+    Cook time: 35~minutes \\
     \vspace*{\baselineskip}
 
     \textbf{One recipe of Meat sauce, page~\pageref{ch:meatsauce}} \\
     \vspace*{\baselineskip}
 
-    454 g (1 pkg) Ricotta cheese \\
-    285 g (1 pkg) frozen chopped spinach, thawed and drained \\
-    2 eggs, lightly beaten \\
-    500 g lasagna noodles, Primo (around 12 sheets) \\
-    1 jar of Catelli Garden Select Tomato \& Basil Pasta Sauce (640ml) \\
+    454~g (1~pkg) Ricotta cheese \\
+    285~g (1~pkg) frozen chopped spinach, thawed and drained \\
+    2~eggs, lightly beaten \\
+    500~g lasagna noodles, Primo (around 12~sheets) \\
+    1~jar of Catelli Garden Select Tomato \& Basil Pasta Sauce (640~ml) \\
     Shredded mozzarella cheese \\
     Grated Pecorino cheese, Chelmos Greek or mitzithra
 }
@@ -31,12 +31,12 @@ Family member: Mom
     \item Preheat oven to 350\degree F and grease a 9~x~13-inch ovenproof dish with Pam spray.
     \item Cook the lasagna noodles according to the package instructions. Once done, set aside.
     \item In a bowl, mix the ricotta cheese, eggs and spinach.
-    \item Spread a thin layer of Garden Select Pasta Sauce, approximately 4 tbsp, in the bottom of the ovenproof dish. Top with 4 lasagna sheets or more, enough to cover the whole bottom of the dish.
-    \item Top with the prepared meat sauce. Add another 2 tbsp of the Pasta Sauce on top and sprinkle with 2 tbsp of Pecorino cheese.
+    \item Spread a thin layer of Garden Select Pasta Sauce, approximately 4~tbsp, in the bottom of the ovenproof dish. Top with 4~lasagna sheets or more, enough to cover the whole bottom of the dish.
+    \item Top with the prepared meat sauce. Add another 2~tbsp of the Pasta Sauce on top and sprinkle with 2~tbsp of Pecorino cheese.
     \item Top with the lasagna sheets. On top, spread all of the prepared spinach mixture and top with more sheets of lasagna.
-    \item Top with more meat sauce, 2 tbsp of Pasta Sauce on top and another 2 tbsp of Pecorino cheese.
+    \item Top with more meat sauce, 2~tbsp of Pasta Sauce on top and another 2~tbsp of Pecorino cheese.
     \item Top with lasagna noodles and remaining meat sauce. Sprinkle enough shredded mozzarella to cover all the meat sauce and some more of the Pecorino cheese.
-    \item Bake for 35-45 minutes, or until the top is golden and bubbly and the corners are crusty. Let cool before cutting into slices! Enjoy :)
+    \item Bake for 35-45~minutes, or until the top is golden and bubbly and the corners are crusty. Let cool before cutting into slices! Enjoy :)
 \end{enumerate}
 
 Leave the frozen spinach on the counter for a few hours to defrost. Squeeze out the liquid as much as you can before adding it to the egg and ricotta.
