--- a/monanteras/lemonpotatoes.tex
+++ b/monanteras/lemonpotatoes.tex
@@ -6,17 +6,17 @@
 \index{side}
 
 \marginnote{
-    \textbf{Makes 8 servings} \\
-    Prep time: 15 minutes \\
-    Cook time: 1 - 1 1/2 hours \\
+    \textbf{Makes 8~servings} \\
+    Prep time: 15~minutes \\
+    Cook time: 1 - 1 1/2~hours \\
     \vspace*{\baselineskip}
 
-    2 kg red potatoes, peeled and quartered \\
+    2~kg red potatoes, peeled and quartered \\
     Salt \\
     Pepper \\
     Olive oil \\
     Oregano \\
-    2 lemons, juiced
+    2~lemons, juiced
 }
 
 Family member: Grandma Eleni
@@ -26,7 +26,7 @@ Family member: Grandma Eleni
 \begin{enumerate}
     \item Preheat oven to 350\degree F.
     \item Put the potato wedges in a large bowl. Drizzle some olive oil, salt, pepper and oregano. Toss them well and transfer them to an ovenproof dish.
-    \item Pour the lemon juice on the potatoes, then add 1 cup of water.
-    \item Place in the oven uncovered for about 1 hour. Check occasionally, basting the potatoes. If necessary, add some more water during cooking.
+    \item Pour the lemon juice on the potatoes, then add 1~cup of water.
+    \item Place in the oven uncovered for about 1~hour. Check occasionally, basting the potatoes. If necessary, add some more water during cooking.
     \item Bake until the potatoes are soft and can be pierced easily with a knife.
 \end{enumerate}
