--- a/monanteras/mavromatika.tex
+++ b/monanteras/mavromatika.tex
@@ -5,15 +5,15 @@
 \index{beans}
 
 \marginnote{
-    \textbf{Makes 6 servings} \\
-    Prep time: 20 minutes \\
-    Cook time: 2 hours + overnight soaking \\
+    \textbf{Makes 6~servings} \\
+    Prep time: 20~minutes \\
+    Cook time: 2~hours + overnight soaking \\
     \vspace*{\baselineskip}
 
-    1/2 mug of black eyed peas, dried (or 1/2 cup) \\
-    1 medium onion, grated \\
-    1/2 - 1 can tomato sauce, Hunt's (213 ml) \\
-    2 bags of spinach, fresh \\
+    1/2~mug of black eyed peas, dried (or 1/2~cup) \\
+    1~medium onion, grated \\
+    1/2 - 1~can tomato sauce, Hunt's (213~ml) \\
+    2~bags of spinach, fresh \\
     Olive oil
 }
 
@@ -23,13 +23,13 @@ Family member: Mom
 
 \begin{enumerate}
     \item Soak black eyed peas in water overnight.
-    \item The next day, drain the water. Put them in a pot with water and bring them to a simmer. Cook for about 20-30 minutes until almost done and strain.
-    \item In a large pot, bring water to a boil. Add spinach and cook until soft, for about 15 minutes. Strain the spinach on top of the black eyes peas.
-    \item Heat a medium pot and add oil. Cook onion until softened, then add the beans and the spinach. Add the tomato sauce, 2 cans of water, salt and pepper.
+    \item The next day, drain the water. Put them in a pot with water and bring them to a simmer. Cook for about 20-30~minutes until almost done and strain.
+    \item In a large pot, bring water to a boil. Add spinach and cook until soft, for about 15~minutes. Strain the spinach on top of the black eyes peas.
+    \item Heat a medium pot and add oil. Cook onion until softened, then add the beans and the spinach. Add the tomato sauce, 2~cans of water, salt and pepper.
     \item Simmer until reduced and thickened. During cooking, you can add more water if thickens too much, to get desired consistency.
-    \item After about 1 hour to 1 hour and a half, check the beans for doneness, then turn off heat and let cool.
+    \item After about 1~hour to 1~hour and a half, check the beans for doneness, then turn off heat and let cool.
 \end{enumerate}
 
-To speed things up, I would use 1 can of black eyed peas and skip Steps 1 and 2. It is quicker to make and would take a total of 45 min to cook.
+To speed things up, I would use 1~can of black eyed peas and skip Steps 1~and 2. It is quicker to make and would take a total of 45~min to cook.
 
 Also really good with, you guessed it, a slice of village bread and a large piece of feta!
