--- a/monanteras/melomakarona.tex
+++ b/monanteras/melomakarona.tex
@@ -7,24 +7,24 @@
 \marginnote{
     \textbf{Makes ? cookies} \\
     Prep time: ? minutes \\
-    Cook time: 30 minutes \\
+    Cook time: 30~minutes \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for cake} \\
-    7 cups all purpose flour, Five Roses
-    3 cups vegetable oil
-    1/2 cup sugar \\
-    1/2 cup orange juice, freshly squeezed \\
-    1/2 cup beer \\
-    2 tsp cinnamon \\
-    1 tsp cloves \\
-    3 tsp baking powder \\
+    7~cups all purpose flour, Five Roses
+    3~cups vegetable oil
+    1/2~cup sugar \\
+    1/2~cup orange juice, freshly squeezed \\
+    1/2~cup beer \\
+    2~tsp cinnamon \\
+    1~tsp cloves \\
+    3~tsp baking powder \\
     \vspace*{\baselineskip}
     
     \textbf{Ingredients for syrup and decoration} \\
     Greek honey \\
-    1/2 cup sugar \\
-    1/2 cup water \\
+    1/2~cup sugar \\
+    1/2~cup water \\
     Walnuts, crushed
 }
 
@@ -33,10 +33,10 @@
 Family member: Grandma Eleni
 
 \begin{enumerate}
-    \item In a large bowl, mix all the ingredients for the melomakarona. Start with 6 cups flour, and add more to get texture needed to shape.
-    \item Place the shapes melomakarona on a baking sheet. Bake at 350\degree F for about 30 minutes or until slightly golden.
+    \item In a large bowl, mix all the ingredients for the melomakarona. Start with 6~cups flour, and add more to get texture needed to shape.
+    \item Place the shapes melomakarona on a baking sheet. Bake at 350\degree F for about 30~minutes or until slightly golden.
     \item Once the cookies are done and have a golden colour, remove from the oven. Let the cookies cool. 
-    \item To make the syrup, put the ingredients in a medium pot and mix. Heat until it simmers and let it boil for 5 minutes. Remove from the heat.
+    \item To make the syrup, put the ingredients in a medium pot and mix. Heat until it simmers and let it boil for 5~minutes. Remove from the heat.
     \item Once the cookies have cooled, put the warm syrup in a large bowl. Dip the cookies one by one, on both sides with a fork in the syrup. Place them on a cooling rack for excess syrup to drip
     \item Decorate with crushed walnuts before storing them in a large Tupperware.
 \end{enumerate}
