--- a/monanteras/patatesavga.tex
+++ b/monanteras/patatesavga.tex
@@ -7,8 +7,8 @@
 
 \marginnote{
     \textbf{Makes 4+ servings} \\
-    Prep time: 15 hours \\
-    Cook time: 20 minutes \\
+    Prep time: 15~hours \\
+    Cook time: 20~minutes \\
     \vspace*{\baselineskip}
 
     Potatoes \\
