--- a/monanteras/tiropita.tex
+++ b/monanteras/tiropita.tex
@@ -6,25 +6,25 @@
 \index{breakfast}
 
 \marginnote{
-    \textbf{Makes 12 servings} \\
-    Prep time: 2 hours \\
-    Cook time: 1 hour \\
+    \textbf{Makes 12~servings} \\
+    Prep time: 2~hours \\
+    Cook time: 1~hour \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for Phyllo dough} \\
-    500g strong white bread flour \\
-    1 tsp salt \\
-    2 tbsp olive oil \\
-    1 tbsp vinegar \\
-    250ml lukewarm water \\
+    500~g strong white bread flour \\
+    1~tsp salt \\
+    2~tbsp olive oil \\
+    1~tbsp vinegar \\
+    250~ml lukewarm water \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for filling} \\
-    325g feta cheese, crumbled and grated \\
-    250g Kefalograviera, or Gruyere cheese grated \\
-    3 eggs, beaten \\
-    2 onions, thinly sliced \\
-    1 1/2 cups milk + 1/4-1/2 cup more for baking \\
+    325~g feta cheese, crumbled and grated \\
+    250~g Kefalograviera, or Gruyere cheese grated \\
+    3~eggs, beaten \\
+    2~onions, thinly sliced \\
+    1 1/2~cups milk + 1/4-1/2~cup more for baking \\
     Olive oil or melted butter
 }
 \marginalfigure{monanteras/images/Tiropita_elsa.jpg}{Tiropita made by Elsa and approved by Grandma Elisavet!}{fig:tiropita}
@@ -36,17 +36,17 @@ Family member: Grandma Elisavet
 \newthought{Tiropita} would always be on the table at family dinners. Grandma made her own phyllo dough, called \textgreek{χοριάτικο φύλλο} (or Village phyllo), popular in small towns and villages all around Greece. In the village \textgreek{Δάρα}, she would cook it in the wood-burning stove, outside the house. For the filling, you can play around with the quantities of different cheeses depending on which you can find and what you like. You can add Mitzithra or ricotta too. Kefalograviera cheese can be found in Greek supermarkets in Laval like PA Supermarket, Atlantis and Supermarché Hawaii (see Annexe).
 
 \begin{enumerate}
-    \item To make the phyllo dough, put the flour and salt into a large bowl. Make a well in the center and pour in the olive oil, vinegar and 240g of the warm water. Mix the flour into the liquid mixture slowly until it comes together, adding the extra 10g of water if you need to to form a dough.
-    \item Knead the dough into a soft elastic dough, then form a smooth ball. If you use a mixer, mix with the paddle attachment until a dough is formed, then switch to the hook and mix on medium for 5 minutes. Cover the dough with a cloth and let it rest for 1 hour.
-    \item While the dough is resting, prepare your filling. In a hot pan, add some olive oil and cook the onions until they have softened. Remove them from the pan and transfer them to a large bowl. Once they have cooled, add the eggs, cheeses and 1 1/2 cups of the milk. Mix well with a fork and set aside. The mix should be slightly liquidy.
+    \item To make the phyllo dough, put the flour and salt into a large bowl. Make a well in the center and pour in the olive oil, vinegar and 240~g of the warm water. Mix the flour into the liquid mixture slowly until it comes together, adding the extra 10~g of water if you need to to form a dough.
+    \item Knead the dough into a soft elastic dough, then form a smooth ball. If you use a mixer, mix with the paddle attachment until a dough is formed, then switch to the hook and mix on medium for 5~minutes. Cover the dough with a cloth and let it rest for 1~hour.
+    \item While the dough is resting, prepare your filling. In a hot pan, add some olive oil and cook the onions until they have softened. Remove them from the pan and transfer them to a large bowl. Once they have cooled, add the eggs, cheeses and 1 1/2~cups of the milk. Mix well with a fork and set aside. The mix should be slightly liquidy.
     \item Preheat the oven to 350\degree F and prepare a 9~x~13-inch baking dish (tapsi) by brushing it with olive oil.
-    \item Divide the dough into 5 equal balls of 160g, take 1 ball and place the others under a cloth. Roll out the dough into a thin rectangle to fit the size of the dish, place it at the bottom of the dish and brush with some olive oil. Spread 1/4 of the filling equally over the dough.
-    \item Roll out a second ball of dough into a thin rectangle, place it on top of the filling, and brush with olive oil. Spread another 1/4 of the filling over the dough. Continue until you have used all the filling and remaining pieces of dough.
+    \item Divide the dough into 5~equal balls of 160~g, take 1~ball and place the others under a cloth. Roll out the dough into a thin rectangle to fit the size of the dish, place it at the bottom of the dish and brush with some olive oil. Spread 1/4~of the filling equally over the dough.
+    \item Roll out a second ball of dough into a thin rectangle, place it on top of the filling, and brush with olive oil. Spread another 1/4~of the filling over the dough. Continue until you have used all the filling and remaining pieces of dough.
     \item Once you have laid the last piece of dough at the top, brush a little olive oil or melted butter at the top. Pour a little bit of milk on the top
-    Bake for 1 hour, or until the pita is brown at the top. Let it cool before slicing into pieces.
+    Bake for 1~hour, or until the pita is brown at the top. Let it cool before slicing into pieces.
 \end{enumerate}
 
-You can make the phyllo dough the day before and keep it in the fridge. Just make sure to remove it from the fridge about 1 hour before rolling out the next day.
+You can make the phyllo dough the day before and keep it in the fridge. Just make sure to remove it from the fridge about 1~hour before rolling out the next day.
 
 \twosidecaptionfigure{monanteras/images/Tiropita.jpg}{monanteras/images/Tiropita2.jpg}{Tiropita and Dinner at the House in Dara}{fig:tiropita2}
 \twosidecaptionfigure{monanteras/images/Dara3.jpg}{monanteras/images/Nekrotafio.jpg}{Dara}{fig:tiropita3}
