--- a/monanteras/tiropitakia_spanakopitakia.tex
+++ b/monanteras/tiropitakia_spanakopitakia.tex
@@ -6,33 +6,33 @@
 \index{appetizer}
 
 \marginnote{
-    \textbf{Makes over 48 triangles} \\
-    Prep time: 1 hour \\
-    Cook time: 15-30 minutes \\
+    \textbf{Makes over 48~triangles} \\
+    Prep time: 1~hour \\
+    Cook time: 15-30~minutes \\
     \vspace*{\baselineskip}
 
-    1 lb Greek Phyllo, Krinos or another brand \\
+    1~lb Greek Phyllo, Krinos or another brand \\
     Olive oil, for brushing\\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for Spanakopitakia filling} \\
-    2 bags spinach \\
-    2 green onions, green parts finely chopped \\
-    1/4 cup fresh dill, chopped \\
-    2 eggs, beaten \\
-    1 tsp baking powder \\
-    Approximately 500g Canadian feta cheese, crumbled \\
-    1/2 block (125g) of cream cheese, Philadelphia \\
-    2 tbsp cottage cheese, Liberte or another brand \\
+    2~bags spinach \\
+    2~green onions, green parts finely chopped \\
+    1/4~cup fresh dill, chopped \\
+    2~eggs, beaten \\
+    1~tsp baking powder \\
+    Approximately 500~g Canadian feta cheese, crumbled \\
+    1/2~block (125~g) of cream cheese, Philadelphia \\
+    2~tbsp cottage cheese, Liberte or another brand \\
     Salt and pepper, to taste \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for Tiropitakia filling} \\
-    2 eggs, beaten \\
-    1 tsp baking powder \\
-    Approximately 500g Canadian feta cheese, crumbled \\
-    1/2 block (125g) of cream cheese, Philadelphia \\
-    2 tbsp cottage cheese, Liberte or another brand \\
+    2~eggs, beaten \\
+    1~tsp baking powder \\
+    Approximately 500~g Canadian feta cheese, crumbled \\
+    1/2~block (125~g) of cream cheese, Philadelphia \\
+    2~tbsp cottage cheese, Liberte or another brand \\
     Salt and pepper, to taste
 }
 
@@ -45,10 +45,10 @@ Family member: Grandma Eleni
 \newthought{Tiropitakia and Spanakopitakia} would always be part of the dinners at my grandparents house. Grandma would prepare lots of them and freeze them after they are baked and cooled.
 
 \begin{enumerate}
-    \item Make the Spanakopitakia filling: bring a large pot of water to a boil. Add the spinach, chopped green onions and dill, and boil for 10-15 minutes. Drain and when cooled, squeeze out the water. Then, heat 1 tbsp of olive oil in a large pan. Sauté the previously blanched greens and cook until wilted. Let the mixture cool down for a while and then tip into a bowl, leaving behind any excess liquid from the spinach. Using a fork, mix in the crumbled feta cheese, the cream cheese, cottage cheese, egg, baking powder, salt and pepper. Mix well with a fork to combine the ingredients.
+    \item Make the Spanakopitakia filling: bring a large pot of water to a boil. Add the spinach, chopped green onions and dill, and boil for 10-15~minutes. Drain and when cooled, squeeze out the water. Then, heat 1~tbsp of olive oil in a large pan. Sauté the previously blanched greens and cook until wilted. Let the mixture cool down for a while and then tip into a bowl, leaving behind any excess liquid from the spinach. Using a fork, mix in the crumbled feta cheese, the cream cheese, cottage cheese, egg, baking powder, salt and pepper. Mix well with a fork to combine the ingredients.
     \item Make the Tiropitakia filling: crumble the feta cheese into a large bowl and add the cream cheese, cottage cheese, egg, baking powder, salt and pepper. Mix well with a fork to combine the ingredients.
     \item Preheat the oven to 350\degree F and start shaping your triangles.
     \item Open one sheet of the phyllo dough on the kitchen counter and brush the first layer with some olive oil. Layer another sheet on top and brush the second phyllo again with some olive oil. Keep the other layers of phyllo under a clean kitchen towel so they don't dry out.
-    \item Cut the phyllo sheets in 3-4 lanes (depending on if you like the triangles to be small or larger). At the end of each lane add one tablespoon of the filling. Fold one corner to form a triangle and continue folding the triangle upon itself, until the entire piece of phyllo is used. Continue with the rest phyllo sheets and filling.
-    \item Place the triangles on a baking sheet lined with parchment. Brush them with some olive oil on top. Bake them in preheated oven for 10-15 minutes, until the tops and bottoms are golden.
+    \item Cut the phyllo sheets in 3-4~lanes (depending on if you like the triangles to be small or larger). At the end of each lane add one tablespoon of the filling. Fold one corner to form a triangle and continue folding the triangle upon itself, until the entire piece of phyllo is used. Continue with the rest phyllo sheets and filling.
+    \item Place the triangles on a baking sheet lined with parchment. Brush them with some olive oil on top. Bake them in preheated oven for 10-15~minutes, until the tops and bottoms are golden.
 \end{enumerate}
