--- a/dermardiros/best_chocolatechip_cookies.tex
+++ b/dermardiros/best_chocolatechip_cookies.tex
@@ -5,21 +5,21 @@
 \index{chocolate}
 
 \marginnote{
-    \textbf{Makes 12 cookies} \\
-    Prep time: 20 minutes \\
-    Cook time: 12-15 minutes \\
+    \textbf{Makes 12~cookies} \\
+    Prep time: 20~minutes \\
+    Cook time: 12-15~minutes \\
     \vspace*{\baselineskip}
 
-    1/2 cup granulated sugar (100g) \\
-    3/4 cup brown sugar, packed (165g) \\
-    1 tsp salt
-    1/3 cup unsalted butter, melted (113g) \\
-    1 large egg \\
-    1 tsp vanilla extract \\
-    1 1/4 cups all-purpose flour (155g) \\
-    1/2 tsp baking soda \\
-    4 oz milk or semi-sweet chocolate chunks (110g) \\
-    4 oz dark chocolate chunks (110g), or your preference
+    1/2~cup granulated sugar (100~g) \\
+    3/4~cup brown sugar, packed (165~g) \\
+    1~tsp salt
+    1/3~cup unsalted butter, melted (113~g) \\
+    1~large egg \\
+    1~tsp vanilla extract \\
+    1 1/4~cups all-purpose flour (155~g) \\
+    1/2~tsp baking soda \\
+    4~oz milk or semi-sweet chocolate chunks (110~g) \\
+    4~oz dark chocolate chunks (110~g), or your preference
 }
 
 \marginalfigure{dermardiros/images/Ballon poire 2023.jpg}{Ballon poire at Clara's birthday, 2023}{fig:chocolatechip_cookies2}
@@ -28,7 +28,7 @@ Family member: Emma
 
 \begin{enumerate}
     \item Preheat oven to 350\degree F or 180\degree C.
-    \item Bake for 12-15 minutes.
+    \item Bake for 12-15~minutes.
 \end{enumerate}
 
 \captionfigure{dermardiros/images/Dzovag's cookies written by Emma.jpeg}{Handwritten recipe}{fig:chocolatechip_cookies}
