--- a/monanteras/fassolada.tex
+++ b/monanteras/fassolada.tex
@@ -5,17 +5,17 @@
 \index{soup}
 
 \marginnote{
-    \textbf{Makes 6-8 servings} \\
-    Prep time: 30 minutes + overnight soaking \\
-    Cook time: 2 hours \\
+    \textbf{Makes 6-8~servings} \\
+    Prep time: 30~minutes + overnight soaking \\
+    Cook time: 2~hours \\
     \vspace*{\baselineskip}
 
-    2 3/4 cups (500g) white beans (haricots), dry \\
-    1 white onion, finely chopped \\
-    3 tbsp olive oil \\
-    1 can tomato juice, Heinz (540ml) \\
-    2 carrots, sliced \\
-    1 small celery stalk, sliced \\
+    2 3/4~cups (500~g) white beans (haricots), dry \\
+    1~white onion, finely chopped \\
+    3~tbsp olive oil \\
+    1~can tomato juice, Heinz (540~ml) \\
+    2~carrots, sliced \\
+    1~small celery stalk, sliced \\
     Salt and Pepper
 }
 
@@ -24,12 +24,12 @@
 Family member: Mom
 
 \begin{enumerate}
-    \item Soak the beans in cold water overnight (around 12 hours).
-    \item The next day, drain out the water using a sieve and rinse them. Put them in a pot of water and bring it to a boil. Cover the pot, simmer for around 30 minutes until they are almost tender. Drain the beans and set them aside.
-    \item Meanwhile, in a medium pot, heat 3 tbsp olive oil and add the chopped onion. Cook on low heat, stirring occasionally, until it is soft.
-    \item Add drained beans and stir very well. Add the carrots, celery, 1 can of Heinz tomato juice and 4 cans of water. Stir well and bring to a boil. Season with salt and pepper.
-    \item Reduce the heat and cover. Leave the soup simmer for 1-2 hours until the beans are tender and the soup has thickened.
+    \item Soak the beans in cold water overnight (around 12~hours).
+    \item The next day, drain out the water using a sieve and rinse them. Put them in a pot of water and bring it to a boil. Cover the pot, simmer for around 30~minutes until they are almost tender. Drain the beans and set them aside.
+    \item Meanwhile, in a medium pot, heat 3~tbsp olive oil and add the chopped onion. Cook on low heat, stirring occasionally, until it is soft.
+    \item Add drained beans and stir very well. Add the carrots, celery, 1~can of Heinz tomato juice and 4~cans of water. Stir well and bring to a boil. Season with salt and pepper.
+    \item Reduce the heat and cover. Leave the soup simmer for 1-2~hours until the beans are tender and the soup has thickened.
     \item Check frequently during cooking and add more water if needed.
 \end{enumerate}
 
-Eat with bread and feta! Normally we halve this recipe for 2 people.
+Eat with bread and feta! Normally we halve this recipe for 2~people.
