--- a/monanteras/hortopita.tex
+++ b/monanteras/hortopita.tex
@@ -6,23 +6,23 @@
 \index{breakfast}
 
 \marginnote{
-    \textbf{Makes 12 servings} \\
-    Prep time: 2 hours \\
-    Cook time: 1 hour \\
+    \textbf{Makes 12~servings} \\
+    Prep time: 2~hours \\
+    Cook time: 1~hour \\
     \vspace*{\baselineskip}
 
     \textbf{One recipe of Phyllo dough from page~\pageref{ch:tiropita}} \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for filling} \\
-    1 kg spinach, washed well and chopped \\
-    1 kg wild or mixed greens (combination of dandelions, lettuce, chicory, arugula, swiss chard), washed well and roughly chopped \\
-    1 bunch of parsley, thinly chopped \\
-    1 leek, thinly chopped \\
-    1 onion, thinly chopped \\
-    300 g feta cheese, crumbled into large chunks \\
-    3 large eggs, whisked \\
-    3 tbsp salt \\
+    1~kg spinach, washed well and chopped \\
+    1~kg wild or mixed greens (combination of dandelions, lettuce, chicory, arugula, swiss chard), washed well and roughly chopped \\
+    1~bunch of parsley, thinly chopped \\
+    1~leek, thinly chopped \\
+    1~onion, thinly chopped \\
+    300~g feta cheese, crumbled into large chunks \\
+    3~large eggs, whisked \\
+    3~tbsp salt \\
     Olive oil
 }
 
@@ -36,11 +36,11 @@ Family member: Grandma Elisavet
 
 \begin{enumerate}
     \item Prepare the phyllo dough as instructed in the recipe for Tiropita. While the dough is resting, prepare your filling.
-    \item In a hot pan, add some olive oil and cook the leek and onions until they have softened. Add the drained spinach and greens to the frying pan, stirring and folding the leaves in with a wooden spoon. Cook for about 5 minutes, until the water has evaporated. Transfer them to a large bowl.
+    \item In a hot pan, add some olive oil and cook the leek and onions until they have softened. Add the drained spinach and greens to the frying pan, stirring and folding the leaves in with a wooden spoon. Cook for about 5~minutes, until the water has evaporated. Transfer them to a large bowl.
     \item Once they have cooled, add the parsley, eggs and feta cheese. Mix well with a fork and set aside.
     \item Preheat the oven to 350\degree F and prepare a 9~x~13-inch baking dish (tapsi) by brushing it with olive oil. You can also use a large round metal pan if you have to feed a family!
     \item Roll out your phyllo dough as instructed in the recipe for Tiropita and use the hortopita filling to make the Hortopita in the similar manner. Once you have laid the last piece of dough at the top, drizzle some olive oil on the top.
-    \item Bake for 1 hour, or until the pita is brown at the top. Let it cool before slicing into pieces.
+    \item Bake for 1~hour, or until the pita is brown at the top. Let it cool before slicing into pieces.
 \end{enumerate}
 
 \twosidecaptionfigure{monanteras/images/Hortopita.jpg}{monanteras/images/Hortopita 2.jpg}{}{fig:hortopita2}
