--- a/monanteras/pastitsiomom.tex
+++ b/monanteras/pastitsiomom.tex
@@ -7,23 +7,23 @@
 
 \marginnote{
     \textbf{Makes 8+} \\
-    Prep time: 1 1/2 hours \\
-    Cook time: 1 hour \\
+    Prep time: 1 1/2~hours \\
+    Cook time: 1~hour \\
     \vspace*{\baselineskip}
 
     \textbf{One recipe of Meat sauce, page~\pageref{ch:meatsauce}} \\
     \vspace*{\baselineskip}
 
     \textbf{Bechamel sauce ingredients} \\
-    1 L whole milk \\
-    1 tbsp butter, unsalted \\
-    1 tbsp all-purpose flour \\
-    2 egg yolks \\
-    2 tbsp Mizithra cheese, grated \\
-    1/2 tsp each salt and pepper \\
+    1~L whole milk \\
+    1~tbsp butter, unsalted \\
+    1~tbsp all-purpose flour \\
+    2~egg yolks \\
+    2~tbsp Mizithra cheese, grated \\
+    1/2~tsp each salt and pepper \\
     \vspace*{\baselineskip}
 
-    500 g pasta, penne rigate \\
+    500~g pasta, penne rigate \\
     Olive oil \\
     Mizithra cheese, grated
 }
@@ -33,11 +33,11 @@
 Family member: Mom
 
 \begin{enumerate}
-    \item To make the Bechamel sauce, heat a large saucepan over medium heat. Melt the butter and add the flour, stirring until it thickens. Add the milk slowly, whisking continuously, until it thickens and coats the back of the spoon, then remove from the heat. Whisk in the egg yolks, 2 tbsp of Mizithra, salt and pepper. Let cool.
-    \item Boil your pasta: add 1 tsp of salt to a pot of boiling water and prepare the spaghetti according to the instructions on the package.
-    \item Preheat the oven to 350\degree F. Brush a 9~x~13-inch ovenproof dish with olive oil and sprinkle about 1/2 tbsp of Mizithra on the bottom.
-    \item In a large bowl, mix the pasta with the prepared meat sauce and 1 tbsp Mizithra. Add as much meat sauce as you like.
-    \item Pour the mixed pasta, meat sauce and cheese in the prepared dish, and then pour the prepared Bechamel sauce over the pasta. Use the back of the spoon to spread it evenly. Sprinkle 1 tbsp of Mizithra on top of the Bechamel.
-    \item Bake the Pastitsio uncovered for about 50 minutes. Keep an eye on your Pastitsio! You may want to turn your pan halfway through the cooking process. Cook until the top is browned evenly.
-    \item Let the dish cool for 20-30 minutes before cutting into pieces and serving. Enjoy :)
+    \item To make the Bechamel sauce, heat a large saucepan over medium heat. Melt the butter and add the flour, stirring until it thickens. Add the milk slowly, whisking continuously, until it thickens and coats the back of the spoon, then remove from the heat. Whisk in the egg yolks, 2~tbsp of Mizithra, salt and pepper. Let cool.
+    \item Boil your pasta: add 1~tsp of salt to a pot of boiling water and prepare the spaghetti according to the instructions on the package.
+    \item Preheat the oven to 350\degree F. Brush a 9~x~13-inch ovenproof dish with olive oil and sprinkle about 1/2~tbsp of Mizithra on the bottom.
+    \item In a large bowl, mix the pasta with the prepared meat sauce and 1~tbsp Mizithra. Add as much meat sauce as you like.
+    \item Pour the mixed pasta, meat sauce and cheese in the prepared dish, and then pour the prepared Bechamel sauce over the pasta. Use the back of the spoon to spread it evenly. Sprinkle 1~tbsp of Mizithra on top of the Bechamel.
+    \item Bake the Pastitsio uncovered for about 50~minutes. Keep an eye on your Pastitsio! You may want to turn your pan halfway through the cooking process. Cook until the top is browned evenly.
+    \item Let the dish cool for 20-30~minutes before cutting into pieces and serving. Enjoy :)
 \end{enumerate}
