--- a/velsa/babka.tex
+++ b/velsa/babka.tex
@@ -5,34 +5,34 @@
 \index{chocolate}
 
 \marginnote{
-    \textbf{Makes 2 medium loaves or 1 giant loaf} \\
-    Prep time: 3-4 hours + overnight proofing \\
-    Cook time: 30-35 minutes \\
+    \textbf{Makes 2~medium loaves or 1~giant loaf} \\
+    Prep time: 3-4~hours + overnight proofing \\
+    Cook time: 30-35~minutes \\
     \vspace*{\baselineskip}
 
     \textbf{Dough ingredients} \\
-    530 g all-purpose flour \\
-    3/4 tsp salt \\
-    100 g sugar \\
-    2 tsp instant yeast \\
-    Grated zest of 1 lemon or 1/2 orange \\
-    3 eggs \\
-    1/2 cup water + 1-2 tbsp extra water \\
-    150 g butter, unsalted room temperature, not too soft \\
+    530~g all-purpose flour \\
+    3/4~tsp salt \\
+    100~g sugar \\
+    2~tsp instant yeast \\
+    Grated zest of 1~lemon or 1/2~orange \\
+    3~eggs \\
+    1/2~cup water + 1-2~tbsp extra water \\
+    150~g butter, unsalted room temperature, not too soft \\
     Vegetable oil or Pam spray \\
     \vspace*{\baselineskip}
 
     \textbf{Filling ingredients} \\
-    130 g dark chocolate \\
-    120 g butter \\
-    50 g powdered (icing) sugar, sifted \\
-    30 g cocoa powder, sifted \\
+    130~g dark chocolate \\
+    120~g butter \\
+    50~g powdered (icing) sugar, sifted \\
+    30~g cocoa powder, sifted \\
     Cinnamon \\
     \vspace*{\baselineskip}
 
     \textbf{Syrup ingredients} \\
-    80 g water \\
-    75 g sugar
+    80~g water \\
+    75~g sugar
 }
 
 Family member: Elsa \& Vaski
@@ -40,15 +40,15 @@ Family member: Elsa \& Vaski
 \marginalfigure{velsa/images/Window pane test.png}{Window pane test}{fig:babka1}
 
 \begin{enumerate}
-    \item In a mixing bowl, add flour, salt, sugar, instant yeast and grated lemon (or orange) and mix using the paddle. Add the eggs and water to a measuring cup, whisk with a fork to combine. Add while mixing, and you can add the extra 1-2 tbsp of water if needed to get all the flour incorporated and a dough is formed. Switch to the hook attachment.
-    \item Mix on medium for another 10 minutes until the dough pulls from the sides of the bowl and is smooth. You can add 1 tbsp of flour to help the dough unstick if needed. The key is to have a very smoothe dough - you can check if it passes the window pane test!
+    \item In a mixing bowl, add flour, salt, sugar, instant yeast and grated lemon (or orange) and mix using the paddle. Add the eggs and water to a measuring cup, whisk with a fork to combine. Add while mixing, and you can add the extra 1-2~tbsp of water if needed to get all the flour incorporated and a dough is formed. Switch to the hook attachment.
+    \item Mix on medium for another 10~minutes until the dough pulls from the sides of the bowl and is smooth. You can add 1~tbsp of flour to help the dough unstick if needed. The key is to have a very smoothe dough - you can check if it passes the window pane test!
     \item Coat a large bowl with vegetable oil (or Pam spray), put the dough inside and cover with plastic wrap. Refrigerate overnight.
     \item The next day, start by making the filling: melt the chocolate and butter in the microwave and mix until smoothe. Stir in the powdered sugar, cocoa powder and cinnamon, and mix until it is homogeneous. Leave the filling aside until it hardens a little and becomes a paste.
-    \item Spray 2 loaf pans with Pam and cover with parchment paper. Take half of the dough from the fridge and roll it out into a 10~x~10-inch square. Spread half the chocolate chilling evenly on the dough. Place the dough on a baking sheet and in the fridge. Do the same with the second half of the dough.
+    \item Spray 2~loaf pans with Pam and cover with parchment paper. Take half of the dough from the fridge and roll it out into a 10~x~10-inch square. Spread half the chocolate chilling evenly on the dough. Place the dough on a baking sheet and in the fridge. Do the same with the second half of the dough.
     \item Roll both doughs into tight event logs, like when making cinnamon rolls. Cut the logs half lengthwise at the top.
-    \item Keeping cut sides up, pinch the ends to hold them together and twist them. If making 2 loaves, cut the babka in half and transfer them to the loaf pans.
-    \item Cover the pans with a damp towel and let rise in the over with the light on for 1h30 to 2 hours.
-    \item About 30 minutes before ready to bake, preheat the oven to 375\degree F and then bake them for 30-35 minutes until an inserted toothpick comes out clean.
+    \item Keeping cut sides up, pinch the ends to hold them together and twist them. If making 2~loaves, cut the babka in half and transfer them to the loaf pans.
+    \item Cover the pans with a damp towel and let rise in the over with the light on for 1.5~to 2~hours.
+    \item About 30~minutes before ready to bake, preheat the oven to 375\degree F and then bake them for 30-35~minutes until an inserted toothpick comes out clean.
     \item While the babkas are in the oven, make the syrup: bring the sugar and water to a simmer and then remove from the heat. As soon as they come out of the oven, brush the syrup on the babkas. Let cool before unmolding and slicing into them.
 \end{enumerate}
 
